# OOP-with-C-Plus-PLus-98

./: .gitignore  CMakeLists.txt  README.md  local_install_cppunit.md
cpp_module_00/: README.md
cpp_module_01/: README.md
cpp_module_01/ex03/: Weapon.cpp  Weapon.hpp  main.cpp
cpp_module_01/ex05/: Harl_2.0
cpp_module_02/: README.md
cpp_module_03/: README.md
cpp_module_04/: README.md
cpp_module_04/ex03/: Cure.cpp  MateriaSource.hpp
cpp_module_05/: AGGREGATION_COMPOSITION.md  README.md
cpp_module_05/ex00/: Bureaucrat.cpp  Bureaucrat.hpp  Makefile  README.md  main.cpp
cpp_module_05/ex00/tests/: BureaucratTest.cpp  TestRunner.cpp
cpp_module_05/ex01/: AForm.cpp  AForm.hpp  Bureaucrat.cpp  Bureaucrat.hpp  Form.hpp  Makefile  README.md  main.cpp
cpp_module_05/ex02/: AForm.cpp  AForm.hpp  Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp  Makefile  PresidentialPardonForm.cpp  README.md  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
cpp_module_05/ex03/: AForm.cpp  AForm.hpp  Bureaucrat.cpp  Bureaucrat.hpp  Intern.cpp  Intern.hpp  Makefile  PresidentialPardonForm.hpp  README.md  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
cpp_module_06/: README.md
cpp_module_06/ex00/: Makefile  ScalarConverter.cpp  ScalarConverter.hpp  main.cpp
cpp_module_06/ex01/: Data.hpp  Makefile  README.md  Serializer.hpp  main.cpp
cpp_module_06/ex02/: Base.cpp  Base.hpp  Makefile  README.md  main.cpp
cpp_module_07/ex00/: Makefile  main.cpp  whatever.hpp
cpp_module_07/ex01/: Makefile  iter.hpp  main.cpp
cpp_module_07/ex02/: Array.hpp  Makefile  main.cpp
cpp_module_08/: README.md
cpp_module_08/ex00/: Makefile  easyfind.hpp  main.cpp
cpp_module_08/ex01/: Makefile  Span.cpp  Span.hpp  main.cpp
cpp_module_08/ex02/: Makefile  MutantStack.hpp  main.cpp
cpp_module_09/: CMakeLists.txt  README.md  guide-testing.md
cpp_module_09/ex00/: BitcoinExchange.cpp  BitcoinExchange.hpp  CMakeLists.txt  Makefile  input.txt  input1.txt  main.cpp
cpp_module_09/ex00/tests/: acutest.h  unit_tests.cpp
cpp_module_09/ex01/: CMakeLists.txt  Makefile  RPN.cpp  RPN.hpp  main.cpp
cpp_module_09/ex01-ImGui/: CMakeLists.txt  main.cpp
cpp_module_09/ex02/: CMakeLists.txt  Makefile  PmergeMe.cpp  PmergeMe.hpp  README.md  Utils.hpp  exemple-case.md  implementation_plan.md  main.cpp
cpp_module_09/ex02/docs/: flow-algorithm.md
cpp_module_09/ex02/tests/: CMakeLists.txt  Makefile  pmergeme_test.cpp
cppunit/: Makefile  Testing.hpp  main.cpp
diagrams_of_cpp/: .$uml_cpp_00_to_cpp_04.drawio.bkp  uml_cpp_00_to_cpp_04.drawio
docs/: 01-build-and-debug.md  04-cppunit-quickstart.md  05-cppunit-complete-guide.md  README.md
testing-cpp98/: Makefile  Testing.cpp  Testing.hpp  main.cpp
uml_diagrams/: README.md
uml_diagrams/module_04/: README.md
